2007-02-05  Ralf Angeli  <angeli@caeruleus.net>

	* tex.el (TeX-submit-bug-report): Remove unnecessary code.
	Include a plea for upgrading into introductory blurb.

2007-02-01  Ikumi Keita	<ikumi@ikumi.que.jp>

	* latex.el: Move (provide 'latex) to the end of buffer.
	(TeX-global-input-files, BibTeX-global-style-files)
	(BibTeX-global-files): checkdoc cleaning.
	(LaTeX-fill-paragraph, LaTeX-fill-code-comment): Use function
	TeX-match-buffer instead of buffer-substring-*.
	(LaTeX-209-to-2e): Likewise.

	* tex-buf.el (TeX-command-region, TeX-command-buffer)
	(TeX-next-error, TeX-check-files, TeX-command-next)
	(TeX-output-extension, TeX-run-set-command, TeX-run-interactive)
	(TeX-sentinel-default-function, TeX-region-create, TeX-region)
	(TeX-error-file, TeX-error-offset, TeX-parse-TeX)
	(TeX-error-description-list): checkdoc cleaning.
	(TeX-run-command, TeX-TeX-sentinel-check, TeX-BibTeX-sentinel):
	Use substitute-command-keys to message key binding.
	(TeX-current-pages): Add doc string.

	* tex.el (TeX-print-command, TeX-queue-command)
	(TeX-command-list, TeX-printer-list, TeX-set-mode-name)
	(TeX-regexp-group-count): checkdoc cleaning.
	(plain-TeX-mode-hook): Declare user option explicitly using
	defcustom.
	(TeX-search-files-kpathsea): Use TeX-kpathsea-path-delimiter
	instead of kpathsea-path-delimiter.

2007-01-23  Ralf Angeli  <angeli@caeruleus.net>

	* doc/auctex.texi (Quotes): Document
	`TeX-math-close-double-dollar'.  Add subheadings.

2007-01-22  Ralf Angeli  <angeli@caeruleus.net>

	* autogen.sh: Define PDFTEX if empty and pass it to `make dist' in
	`doc' directory for documentation generation.

	* doc/Makefile.in (docdir, PACKAGE_TARNAME): New variables.
	(dist): Add tex-ref.pdf target.
	(extradist): Remove tex-ref.pdf target.
	(install-auctex): Add tex-ref.pdf target.  Install tex-ref.pdf
	into $(docdir).

2007-01-21  Ralf Angeli  <angeli@caeruleus.net>

	* tex-fptex.el: Make calls of start.exe work with quoted file
	names.
